# khun-phaen-tracker

./: .gitignore  AGENTS.md  Dockerfile  README.md  README.th.md  TODO_fix_frontend.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
.agents/plugins/: marketplace.json
.agents/rules/: rule.md
.github/workflows/: deploy.yml
backend-server/: .env.example  Cargo.toml  docker-compose.atlas.yml  docker-compose.yml
backend-server/src/: main.rs  state.rs
backend-server/src/handlers/: ai_handler.rs  assignee_handler.rs  attachment_handler.rs  auth_handler.rs  checklist_template_handler.rs  comment_handler.rs  common.rs  data_handler.rs  milestone_handler.rs  mod.rs  notification_handler.rs  project_handler.rs  sprint_handler.rs  storage_handler.rs  task_handler.rs  test_case_handler.rs  test_run_handler.rs  workspace_handler.rs
backend-server/src/models/: ai.rs  data.rs  milestone.rs  mod.rs  notification.rs  storage.rs  test_case.rs  test_run.rs  workspace.rs
backend-server/src/repositories/: ai_repo.rs  data_repo.rs  milestone_repo.rs  mod.rs  notification_repo.rs  storage_repo.rs  test_case_repo.rs  test_run_repo.rs  test_suite_repo.rs  workspace_repo.rs
backend-server/src/services/: ai_service.rs  auth_service.rs  milestone_service.rs  mod.rs  notification_service.rs  room_service.rs  storage_service.rs  test_case_service.rs  test_suite_service.rs
src/: app.css  app.html
src/lib/: apis.ts  db.ts  db.unit.test.ts  types.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
tests/: milestone-logic.test.ts  today-filter.test.ts
(+117 files in other folders)
