[package]
name = "khu-phaen-backend-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rand = "0.8"
tower_governor = "0.4"
dotenv = "0.15.0"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
bson = { version = "^2.0", features = ["chrono-0_4"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
axum-extra = { version = "0.9.0", features = ["cookie"] }
serde_with = "3.12.0"
time = { version = "0.3.36", features = ["formatting", "macros"] }
reqwest = { version = "0.13.2", features = ["json"] }
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
tokio-util = { version = "0.7.18", features = ["io"] }

[[bin]]
name = "backend-server"
path = "src/main.rs"
